infra/manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  namespace: todo-backend
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.todo.jxel.dev
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-backend
              port:
                number: 80
